# AnonymityAPK

./: .gitignore  DEVELOPMENT_HISTORY.md  SESSION_LOG_2026-03-04.md  buildozer.spec  check_consistency.py  check_consistency_v2.py  context.txt  convert_h5_to_onnx.py  debug_profiles.py  detector.py  diagnose_embeddings.py  download_recognizer.py  enrollment.py  gui.py  inspect_mfn_shape.py  inspect_models.py  inspect_onnx.py  inspect_profiles.py  main.py  main_android.py  main_anonymity.py  main_desktop_backup.py  pyproject.toml  recognizer.py  requirements.txt  resolve_conflicts.py  test_distance_random.py  test_gap.py  test_layout_logic.py  test_real_distance.py  tracker.py  web_bridge.py
.github/workflows/: android_build.yml
anonymity/: __main__.py  main_android.py  main_anonymity.py  recognizer.py  web_bridge.py
anonymity/anonymity_ui/: README.md  index.html
anonymity/data/: vlogger_profile.npy  vlogger_profiles_v1_backup.npy
src/anonymity/: __init__.py  enrollment.py  main_anonymity.py  tracker.py
src/anonymity/anonymity_ui/: package-lock.json
src/anonymity/data/: vlogger_profiles.npy
