[project]
name = "anonymity"
version = "0.1.0"
description = "Real-time face anonymity for vloggers"
authors = [
    { name = "VloggerGuard", email = "dev@vloggerguard.local" },
]
license = { text = "Proprietary" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[tool.briefcase]
project_name = "Anonymity"
bundle = "org.vloggerguard"

[tool.briefcase.app.anonymity]
formal_name = "Anonymity"
description = "Real-time face anonymity for vloggers"
icon = "src/anonymity/resources/anonymity"
sources = ["src"]

[tool.briefcase.app.anonymity.android]
requires = ["numpy"]
icon = "src/anonymity/resources/anonymity"
splash = "src/anonymity/resources/anonymity"
splash_background_color = "#121212"
build_gradle_dependencies = ["org.opencv:opencv:4.9.0"]

# Android permissions as a table
[tool.briefcase.app.anonymity.android.permission]
camera = "Detect and blur faces"
internet = "Serve local WebView UI"
"android.permission.WRITE_EXTERNAL_STORAGE" = "Save recordings"
"android.permission.READ_EXTERNAL_STORAGE" = "Load vlogger profiles"
"android.permission.RECORD_AUDIO" = "Record audio"
